Feature #1 add copy/paste functionality to swection editor copy button to clipboard

--- a/force-app/main/default/lwc/ggwSection/ggwSection.html
+++ b/force-app/main/default/lwc/ggwSection/ggwSection.html
@@ -6,6 +6,7 @@
         <lightning-button-icon icon-name="utility:save"  alternative-text="Save" title="save" data-button-number="03" onclick={saveRichText}><label>Save</label></lightning-button-icon>
         <lightning-button-icon icon-name="utility:insert_template"  alternative-text="Add to library" title="Add to library" data-button-number="04" onclick={addBlockToLibrary}><label>Add to Library</label></lightning-button-icon>
         <lightning-button-icon icon-name="utility:delete"  alternative-text="Delete section" title="Delete section" data-button-number="05" onclick={handleDeleteSection}><label>Delete</label></lightning-button-icon>
+        <lightning-button-icon icon-name="utility:copy"  alternative-text="Copy" title="copy" data-button-number="06" onclick={copyText}><label>Copy</label></lightning-button-icon>
 
       </lightning-button-group>
         <div class="slds-box slds-box_xx-small slds-var-m-left_x-small slds-var-m-right_x-small slds-var-m-bottom_xx-small">            
