FIx for copy RTF with plain text format

--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -121,7 +121,7 @@
   </template>
 
   <!-- Display Illustration NO Data showCard = FALSE -->
-  <template if:false={showCard}></templateif:true>
+  <template if:false={showCard}>
     <lightning-quick-action-panel header={displayTitle}>
       <div>
     <div class="slds-illustration slds-illustration_small">
