Rename export label from HTML to Preview #17

--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -27,7 +27,7 @@
                                           variant="border" title="Export"
                                           label="Export"
                                           tooltip="Choose format to export" icon-name="utility:down">
-                    <lightning-menu-item value="exportHTML" label="HTML"></lightning-menu-item>  
+                    <lightning-menu-item value="exportHTML" label="Preview"></lightning-menu-item>  
                     <lightning-menu-item value="exportPDF" label="PDF"></lightning-menu-item>
                     <lightning-menu-item value="exportWORD" label="Word"></lightning-menu-item>
                   </lightning-button-menu>
