--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.html
@@ -20,7 +20,7 @@
                 <c-ggw-language-display applicationid={recordId} class="slds-p-right_x-small" ></c-ggw-language-display>
 
                 <lightning-button-group >
-                  <lightning-button label="Reorder" class="circle" onclick={reorderSections}></lightning-button>
+                  <lightning-button label="Manage Sections" class="circle" onclick={reorderSections}></lightning-button>
                   <lightning-button icon-name="utility:refresh"  alternative-text="Refresh" title="Refresh" onclick={reloadSections}></lightning-button>
   
                   <lightning-button-menu onselect={handleExportMenuSelect} alternative-text="Export menu" 
