--- a/force-app/main/default/lwc/ggwSection/ggwSection.html
+++ b/force-app/main/default/lwc/ggwSection/ggwSection.html
@@ -1,14 +1,15 @@
 <template>
     <lightning-card title={displayTitle} >
       <lightning-button-group slot="actions">
-        <lightning-button-icon icon-name="utility:add"  alternative-text="Add block" title="Add block" aria-label="Add block" data-button-number="01" onclick={showModal}><label>Add block</label></lightning-button-icon>
+        <lightning-button-icon icon-name="utility:add" alternative-text="Add block" title="Add block" aria-label="Add block" data-button-number="01" onclick={showModal}><label>Add block</label></lightning-button-icon>
         <lightning-button-icon-stateful icon-name="utility:edit" selected={enableEdit} alternative-text="Edit" title="Edit block" data-button-number="02" onclick={handleEnableEdit}><label>Edit block</label></lightning-button-icon-stateful>
-        <lightning-button-icon icon-name="utility:save"  alternative-text="Save" title="save" data-button-number="03" onclick={saveRichText}><label>Save</label></lightning-button-icon>
-        <lightning-button-icon icon-name="utility:insert_template"  alternative-text="Add to library" title="Add to library" data-button-number="04" onclick={addBlockToLibrary}><label>Add to Library</label></lightning-button-icon>
-        <lightning-button-icon icon-name="utility:delete"  alternative-text="Delete section" title="Delete section" data-button-number="05" onclick={handleDeleteSection}><label>Delete</label></lightning-button-icon>
-        <lightning-button-icon icon-name="utility:copy"  alternative-text="Copy" title="copy" data-button-number="06" onclick={copyText}><label>Copy</label></lightning-button-icon>
-
+        <lightning-button-icon icon-name="utility:save" alternative-text="Save" title="save" data-button-number="03" onclick={saveRichText}><label>Save</label></lightning-button-icon>
+        <lightning-button-icon icon-name="utility:insert_template" alternative-text="Add to library" title="Add to library" data-button-number="04" onclick={addBlockToLibrary}><label>Add to Library</label></lightning-button-icon>
+        <lightning-button-icon icon-name="utility:delete" alternative-text="Delete section" title="Delete section" data-button-number="05" onclick={handleDeleteSection}><label>Delete</label></lightning-button-icon>
+        <lightning-button-icon icon-name="utility:copy" alternative-text="Copy" title="copy" data-button-number="06" onclick={copyText}><label>Copy</label></lightning-button-icon>
+        <lightning-button label={charCounter} variant={buttonVariant} title="Non-primary action" data-button-number="07"><label>CC</label></lightning-button>
       </lightning-button-group>
+      
         <div class="slds-box slds-box_xx-small slds-var-m-left_x-small slds-var-m-right_x-small slds-var-m-bottom_xx-small">            
           <template if:false={enableEdit}>
             <lightning-formatted-rich-text
@@ -21,7 +22,7 @@
               onchange={handleTextBlockChange}>
             </lightning-input-rich-text>
           </template>  
-        </div>   
+        </div> 
     </lightning-card>
 
     <!-- OPEN Content Block Modal here -->
